[package]
name = "rayon_test"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.67"


[dependencies]
egui = "0.21.0"
egui_extras = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

instant = { version = "0.1", features = ["wasm-bindgen"] }
itertools = "0.10"
rayon = "1.6.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
rayon = { git = "https://github.com/rayon-rs/rayon.git", rev = "9e62075db8e6094e840a2572d443880e3a4c1060" }
